V0.8.9
---------
 * Added a workaround for menu paddings inherited from parent stylesheets (as in the context menu of VLC's palylist search lineedit).
 * No shadow for tooltips/menus that are already translucent (and keep track of those made translucent).

V0.8.8
---------
 * Changed the layout of the config page of Kvantum Manager.
 * Removed custom icons, except those for MDI titlebars (Kavntum isn't an icon theme after all).
 * Added a key for slim toolbars.
 * Fixed the appearance of Konqueror's security icon on the right of its URL bar.
 * Enable/disable the compositing items of Kvatum Manager's config page correctly.

V0.8.7
---------
 * Added a key and an option for textless progressbars.
 * Added a key and an option for disabling menubar mouse tracking.
 * Font boldness can be set separately for most widget groups now.
 * Fixed LibreOffice's spinboxes.
 * Respect the MenuItem indicator name for right/left arrows and only if the SVG elements aren't found, use the IndicatorArrow name.
 * Added a key for centering toolbar handle instead of scaling it vertically.
 * Don't draw toolbars in KAboutDialog (KAboutPerson).
 * Added the root installation path $PREFIX/share/Kvantum. The user installation has priority.
 * Fixed menubar item states for Qt5 and made them like that of Qt4.
 * Take button icons from icon theme if there is no SVG element for them.
 * Don't force icon sizes.
 * Added a key for toolbutton style.
 * Don't draw scroll area corner panels.
 * Added a toggled state for progressbars (when they are inside selected view items).
 * Got rid of Qt's "standardbutton-no-16.png" as far as possible.

V0.8.6
---------
 * Another method for making Qt5 windows translucent (got rid of private headers).
 * Kvantum Manager: Allow spaces in the theme path (but not in the theme name) when installing.
 * Prevent a crash on quitting in apps using QtWebKit when translucency is enabled.