@@ -2,6 +2,7 @@ V0.8.9
 ---------
  * Added a workaround for menu paddings inherited from parent stylesheets (as in the context menu of VLC's palylist search lineedit).
  * No shadow for tooltips/menus that are already translucent (and keep track of those made translucent).
+ * Added a key for double-click.
 
 V0.8.8
 ---------
